# rover

./: .editorconfig  .gitignore  README.md  a.txt
.github/actions/clean_image_tags/: action.yaml
.github/actions/update_version/: action.yaml
.github/workflows/: ci.yaml
esp32/: rover.ino
kicad/: yandex-rover.kicad_pcb  yandex-rover.kicad_prl  yandex-rover.kicad_pro  yandex-rover.kicad_sch
kicad/Gerber/: yandex-rover-B_Cu.gbr  yandex-rover-B_Mask.gbr  yandex-rover-B_Paste.gbr  yandex-rover-B_Silkscreen.gbr  yandex-rover-Edge_Cuts.gbr  yandex-rover-F_Cu.gbr  yandex-rover-F_Mask.gbr  yandex-rover-F_Paste.gbr  yandex-rover-F_Silkscreen.gbr  yandex-rover-NPTH-drl_map.gbr  yandex-rover-NPTH.drl  yandex-rover-PTH-drl_map.gbr  yandex-rover-PTH.drl  yandex-rover-job.gbrjob
speech-to-text/: Dockerfile  README.md  pyproject.toml
speech-to-text/src/speech_to_text/: __main__.py
stm32/: rover.ioc
stm32/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
stm32/MIDWARE/FATFS_SD/: FATFS_SD.h
