[tool.poetry]
name = "speech-to-text"
version = "25.8.3"
description = "A Speech-to-Text API based on OpenAI Whisper"
authors = ["Alex Denisova <alexadenisova@gmail.com>"]
readme = "README.md"
packages = [{ include = "speech_to_text", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.0"
faster-whisper = "^1.2.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
rich = "^13.5.2"
black = "^22.1.0"
isort = "^5.10.1"
pylint = "^2.12.2"
pylint-gitlab = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

